--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "remote-redux-devtools": "^0.5.16"
+    "remote-redux-devtools": "^0.5.16",
+    "typescript": "^4.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
