--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "^17.0.2",
     "@types/react-redux": "^7.1.16",
     "@types/reselect": "^2.2.0",
+    "lodash": "^4.17.21",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.168"
   }
 }
