--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/dotenv": "^8.2.0",
     "@types/react": "^17.0.2",
     "@types/react-redux": "^7.1.16",
     "@types/reselect": "^2.2.0",
+    "fs": "0.0.1-security",
     "lodash": "^4.17.21",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
