--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "@types/react": "^17.0.2",
     "@types/react-redux": "^7.1.16",
     "@types/reselect": "^2.2.0",
+    "final-form": "^4.20.2",
     "fs": "0.0.1-security",
     "lodash": "^4.17.21",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.5.3",
     "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "remote-redux-devtools": "^0.5.16",
     "typescript": "^4.1.5"
